// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ilm banner extension should return extension when any index has lifecycle error 1`] = `
Object {
  "filter": Query {
    "ast": _AST {
      "_clauses": Array [
        Object {
          "field": "ilm.step",
          "match": "must",
          "operator": "eq",
          "type": "field",
          "value": "ERROR",
        },
      ],
      "_indexedClauses": Object {
        "field": Object {
          "ilm.step": Array [
            Object {
              "field": "ilm.step",
              "match": "must",
              "operator": "eq",
              "type": "field",
              "value": "ERROR",
            },
          ],
        },
        "is": Object {},
        "term": Array [],
      },
    },
    "syntax": Object {
      "parse": [Function],
      "print": [Function],
    },
    "text": "ilm.step:ERROR",
  },
  "filterLabel": "Show errors",
  "title": "1
          index has
          lifecycle errors",
  "type": "warning",
}
`;

exports[`ilm filter extension should return extension when any index has lifecycle policy 1`] = `
Array [
  Object {
    "field": "ilm.managed",
    "multiSelect": false,
    "name": "Lifecycle status",
    "options": Array [
      Object {
        "value": true,
        "view": "Managed",
      },
      Object {
        "value": false,
        "view": "Unmanaged",
      },
    ],
    "type": "field_value_selection",
  },
  Object {
    "field": "ilm.phase",
    "multiSelect": "or",
    "name": "Lifecycle phase",
    "options": Array [
      Object {
        "value": "hot",
        "view": "Hot",
      },
      Object {
        "value": "warm",
        "view": "Warm",
      },
      Object {
        "value": "cold",
        "view": "Cold",
      },
      Object {
        "value": "delete",
        "view": "Delete",
      },
    ],
    "type": "field_value_selection",
  },
]
`;

exports[`ilm summary extension should return extension when index has lifecycle error 1`] = `
<IndexLifecycleSummary
  index={
    Object {
      "aliases": "none",
      "documents": "2",
      "documents_deleted": "0",
      "health": "yellow",
      "ilm": Object {
        "action": "rollover",
        "action_time_millis": 1544187775891,
        "failed_step": "check-rollover-ready",
        "index": "testy3",
        "lifecycle_date_millis": 1544020872361,
        "managed": true,
        "phase": "hot",
        "phase_execution": Object {
          "modified_date_in_millis": 1544031699844,
          "phase_definition": Object {
            "actions": Object {
              "rollover": Object {
                "max_size": "1gb",
              },
            },
            "min_age": "0s",
          },
          "policy": "testy",
          "version": 1,
        },
        "phase_time_millis": 1544187775891,
        "policy": "testy",
        "step": "ERROR",
        "step_info": Object {
          "reason": "setting [index.lifecycle.rollover_alias] for index [testy3] is empty or not defined",
          "stack_trace": "fakestacktrace",
          "type": "illegal_argument_exception",
        },
        "step_time_millis": 1544187776208,
      },
      "name": "testy3",
      "primary": "1",
      "primary_size": "6.5kb",
      "replica": "1",
      "size": "6.5kb",
      "status": "open",
      "uuid": "XL11TLa3Tvq298_dMUzLHQ",
    }
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
>
  <EuiTitle
    size="s"
    textTransform="none"
  >
    <h3
      className="euiTitle euiTitle--small"
    >
      <FormattedMessage
        defaultMessage="Index lifecycle management"
        id="xpack.indexLifecycleMgmt.indexLifecycleMgmtSummary.summaryTitle"
        values={Object {}}
      >
        Index lifecycle management
      </FormattedMessage>
    </h3>
  </EuiTitle>
  <EuiSpacer
    size="s"
  >
    <div
      className="euiSpacer euiSpacer--s"
    />
  </EuiSpacer>
  <EuiCallOut
    color="danger"
    iconType="cross"
    size="m"
    title={
      <FormattedMessage
        defaultMessage="Index lifecycle error"
        id="xpack.indexLifecycleMgmt.indexLifecycleMgmtSummary.summaryErrorMessage"
        values={Object {}}
      />
    }
  >
    <div
      className="euiCallOut euiCallOut--danger"
    >
      <div
        className="euiCallOutHeader"
      >
        <EuiIcon
          aria-hidden="true"
          className="euiCallOutHeader__icon"
          size="m"
          type="cross"
        >
          <cross
            aria-hidden="true"
            className="euiIcon euiIcon--medium euiCallOutHeader__icon"
            focusable="false"
            height="16"
            style={null}
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <svg
              aria-hidden="true"
              className="euiIcon euiIcon--medium euiCallOutHeader__icon"
              focusable="false"
              height="16"
              style={null}
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.293 8L3.146 3.854a.5.5 0 1 1 .708-.708L8 7.293l4.146-4.147a.5.5 0 0 1 .708.708L8.707 8l4.147 4.146a.5.5 0 0 1-.708.708L8 8.707l-4.146 4.147a.5.5 0 0 1-.708-.708L7.293 8z"
              />
            </svg>
          </cross>
        </EuiIcon>
        <span
          className="euiCallOutHeader__title"
        >
          <FormattedMessage
            defaultMessage="Index lifecycle error"
            id="xpack.indexLifecycleMgmt.indexLifecycleMgmtSummary.summaryErrorMessage"
            values={Object {}}
          >
            Index lifecycle error
          </FormattedMessage>
        </span>
      </div>
      <EuiText
        grow={true}
        size="s"
      >
        <div
          className="euiText euiText--small"
        >
          illegal_argument_exception
          : 
          setting [index.lifecycle.rollover_alias] for index [testy3] is empty or not defined
          <EuiSpacer
            size="s"
          >
            <div
              className="euiSpacer euiSpacer--s"
            />
          </EuiSpacer>
        </div>
      </EuiText>
    </div>
  </EuiCallOut>
  <EuiSpacer
    size="m"
  >
    <div
      className="euiSpacer euiSpacer--m"
    />
  </EuiSpacer>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <EuiFlexItem
        component="div"
        grow={true}
      >
        <div
          className="euiFlexItem"
        >
          <EuiDescriptionList
            align="left"
            compressed={false}
            textStyle="normal"
            type="column"
          >
            <dl
              className="euiDescriptionList euiDescriptionList--column"
            >
              <EuiDescriptionListTitle
                key="policy"
              >
                <dt
                  className="euiDescriptionList__title"
                >
                  <strong>
                    Lifecycle policy
                  </strong>
                </dt>
              </EuiDescriptionListTitle>
              <EuiDescriptionListDescription
                key="policy_desc"
              >
                <dd
                  className="euiDescriptionList__description"
                >
                  <EuiLink
                    color="primary"
                    href="#/management/elasticsearch/index_lifecycle_management/policies/edit/testy"
                    type="button"
                  >
                    <a
                      className="euiLink euiLink--primary"
                      href="#/management/elasticsearch/index_lifecycle_management/policies/edit/testy"
                    >
                      testy
                    </a>
                  </EuiLink>
                </dd>
              </EuiDescriptionListDescription>
              <EuiDescriptionListTitle
                key="action"
              >
                <dt
                  className="euiDescriptionList__title"
                >
                  <strong>
                    Current action
                  </strong>
                </dt>
              </EuiDescriptionListTitle>
              <EuiDescriptionListDescription
                key="action_desc"
              >
                <dd
                  className="euiDescriptionList__description"
                >
                  rollover
                </dd>
              </EuiDescriptionListDescription>
              <EuiDescriptionListTitle
                key="failed_step"
              >
                <dt
                  className="euiDescriptionList__title"
                >
                  <strong>
                    Failed step
                  </strong>
                </dt>
              </EuiDescriptionListTitle>
              <EuiDescriptionListDescription
                key="failed_step_desc"
              >
                <dd
                  className="euiDescriptionList__description"
                >
                  check-rollover-ready
                </dd>
              </EuiDescriptionListDescription>
            </dl>
          </EuiDescriptionList>
        </div>
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={true}
      >
        <div
          className="euiFlexItem"
        >
          <EuiDescriptionList
            align="left"
            compressed={false}
            textStyle="normal"
            type="column"
          >
            <dl
              className="euiDescriptionList euiDescriptionList--column"
            >
              <EuiDescriptionListTitle
                key="phase"
              >
                <dt
                  className="euiDescriptionList__title"
                >
                  <strong>
                    Current phase
                  </strong>
                </dt>
              </EuiDescriptionListTitle>
              <EuiDescriptionListDescription
                key="phase_desc"
              >
                <dd
                  className="euiDescriptionList__description"
                >
                  hot
                </dd>
              </EuiDescriptionListDescription>
              <EuiDescriptionListTitle
                key="action_time_millis"
              >
                <dt
                  className="euiDescriptionList__title"
                >
                  <strong>
                    Current action time
                  </strong>
                </dt>
              </EuiDescriptionListTitle>
              <EuiDescriptionListDescription
                key="action_time_millis_desc"
              >
                <dd
                  className="euiDescriptionList__description"
                >
                  2018-12-07 13:02:55
                </dd>
              </EuiDescriptionListDescription>
              <EuiPopover
                anchorPosition="downCenter"
                button={
                  <EuiLink
                    color="primary"
                    onClick={[Function]}
                    type="button"
                  >
                    <FormattedMessage
                      defaultMessage="Show phase definition"
                      id="xpack.indexLifecycleMgmt.indexLifecycleMgmtSummary.showPhaseDefinitionButton"
                      values={Object {}}
                    />
                  </EuiLink>
                }
                closePopover={[Function]}
                hasArrow={true}
                id="phaseExecutionPopover"
                isOpen={false}
                key="phaseExecutionPopover"
                ownFocus={false}
                panelPaddingSize="m"
                withTitle={true}
              >
                <EuiOutsideClickDetector
                  onOutsideClick={[Function]}
                >
                  <div
                    className="euiPopover euiPopover--anchorDownCenter euiPopover--withTitle"
                    id="phaseExecutionPopover"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                  >
                    <div
                      className="euiPopover__anchor"
                    >
                      <EuiLink
                        color="primary"
                        onClick={[Function]}
                        type="button"
                      >
                        <button
                          className="euiLink euiLink--primary"
                          onClick={[Function]}
                          type="button"
                        >
                          <FormattedMessage
                            defaultMessage="Show phase definition"
                            id="xpack.indexLifecycleMgmt.indexLifecycleMgmtSummary.showPhaseDefinitionButton"
                            values={Object {}}
                          >
                            Show phase definition
                          </FormattedMessage>
                        </button>
                      </EuiLink>
                    </div>
                  </div>
                </EuiOutsideClickDetector>
              </EuiPopover>
            </dl>
          </EuiDescriptionList>
        </div>
      </EuiFlexItem>
    </div>
  </EuiFlexGroup>
</IndexLifecycleSummary>
`;

exports[`ilm summary extension should return extension when index has lifecycle policy 1`] = `
<IndexLifecycleSummary
  index={
    Object {
      "aliases": "none",
      "documents": "2",
      "documents_deleted": "0",
      "health": "yellow",
      "ilm": Object {
        "action": "complete",
        "action_time_millis": 1544187775867,
        "index": "testy3",
        "lifecycle_date_millis": 1544020872361,
        "managed": true,
        "phase": "new",
        "phase_time_millis": 1544187775867,
        "policy": "testy",
        "step": "complete",
        "step_time_millis": 1544187775867,
      },
      "name": "testy3",
      "primary": "1",
      "primary_size": "6.5kb",
      "replica": "1",
      "size": "6.5kb",
      "status": "open",
      "uuid": "XL11TLa3Tvq298_dMUzLHQ",
    }
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
>
  <EuiTitle
    size="s"
    textTransform="none"
  >
    <h3
      className="euiTitle euiTitle--small"
    >
      <FormattedMessage
        defaultMessage="Index lifecycle management"
        id="xpack.indexLifecycleMgmt.indexLifecycleMgmtSummary.summaryTitle"
        values={Object {}}
      >
        Index lifecycle management
      </FormattedMessage>
    </h3>
  </EuiTitle>
  <EuiSpacer
    size="m"
  >
    <div
      className="euiSpacer euiSpacer--m"
    />
  </EuiSpacer>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <div
      className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <EuiFlexItem
        component="div"
        grow={true}
      >
        <div
          className="euiFlexItem"
        >
          <EuiDescriptionList
            align="left"
            compressed={false}
            textStyle="normal"
            type="column"
          >
            <dl
              className="euiDescriptionList euiDescriptionList--column"
            >
              <EuiDescriptionListTitle
                key="policy"
              >
                <dt
                  className="euiDescriptionList__title"
                >
                  <strong>
                    Lifecycle policy
                  </strong>
                </dt>
              </EuiDescriptionListTitle>
              <EuiDescriptionListDescription
                key="policy_desc"
              >
                <dd
                  className="euiDescriptionList__description"
                >
                  <EuiLink
                    color="primary"
                    href="#/management/elasticsearch/index_lifecycle_management/policies/edit/testy"
                    type="button"
                  >
                    <a
                      className="euiLink euiLink--primary"
                      href="#/management/elasticsearch/index_lifecycle_management/policies/edit/testy"
                    >
                      testy
                    </a>
                  </EuiLink>
                </dd>
              </EuiDescriptionListDescription>
              <EuiDescriptionListTitle
                key="action"
              >
                <dt
                  className="euiDescriptionList__title"
                >
                  <strong>
                    Current action
                  </strong>
                </dt>
              </EuiDescriptionListTitle>
              <EuiDescriptionListDescription
                key="action_desc"
              >
                <dd
                  className="euiDescriptionList__description"
                >
                  complete
                </dd>
              </EuiDescriptionListDescription>
              <EuiDescriptionListTitle
                key="failed_step"
              >
                <dt
                  className="euiDescriptionList__title"
                >
                  <strong>
                    Failed step
                  </strong>
                </dt>
              </EuiDescriptionListTitle>
              <EuiDescriptionListDescription
                key="failed_step_desc"
              >
                <dd
                  className="euiDescriptionList__description"
                >
                  -
                </dd>
              </EuiDescriptionListDescription>
            </dl>
          </EuiDescriptionList>
        </div>
      </EuiFlexItem>
      <EuiFlexItem
        component="div"
        grow={true}
      >
        <div
          className="euiFlexItem"
        >
          <EuiDescriptionList
            align="left"
            compressed={false}
            textStyle="normal"
            type="column"
          >
            <dl
              className="euiDescriptionList euiDescriptionList--column"
            >
              <EuiDescriptionListTitle
                key="phase"
              >
                <dt
                  className="euiDescriptionList__title"
                >
                  <strong>
                    Current phase
                  </strong>
                </dt>
              </EuiDescriptionListTitle>
              <EuiDescriptionListDescription
                key="phase_desc"
              >
                <dd
                  className="euiDescriptionList__description"
                >
                  new
                </dd>
              </EuiDescriptionListDescription>
              <EuiDescriptionListTitle
                key="action_time_millis"
              >
                <dt
                  className="euiDescriptionList__title"
                >
                  <strong>
                    Current action time
                  </strong>
                </dt>
              </EuiDescriptionListTitle>
              <EuiDescriptionListDescription
                key="action_time_millis_desc"
              >
                <dd
                  className="euiDescriptionList__description"
                >
                  2018-12-07 13:02:55
                </dd>
              </EuiDescriptionListDescription>
            </dl>
          </EuiDescriptionList>
        </div>
      </EuiFlexItem>
    </div>
  </EuiFlexGroup>
</IndexLifecycleSummary>
`;

exports[`remove lifecycle action extension should return extension when all indices have lifecycle policy 1`] = `
Object {
  "buttonLabel": "Remove lifecycle policy",
  "icon": "stopFilled",
  "indexNames": Array [
    Array [
      "testy3",
      "testy3",
    ],
  ],
  "renderConfirmModal": [Function],
}
`;

exports[`retry lifecycle action extension should return extension when all indices have lifecycle errors 1`] = `
Object {
  "buttonLabel": "Retry lifecycle step",
  "icon": "play",
  "indexNames": Array [
    Array [
      "testy3",
      "testy3",
    ],
  ],
  "requestMethod": [Function],
  "successMessage": "Called retry lifecycle step for: \\"testy3\\", \\"testy3\\"",
}
`;
